--- a/IdentityWebApp/Pages/Index.cshtml
+++ b/IdentityWebApp/Pages/Index.cshtml
@@ -1,10 +1,50 @@
 ﻿@page
+@using IdentityWebApp.Models
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to the Identity Software</h1>
+    <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
+</div>
+
+
+<div class="container">
+    <div class="row">
+        @if (ViewData["identities"] != null)
+        {
+            var identities = ViewData["identities"] as List<Identity>;
+
+            if (identities != null && identities.Any())
+            {
+                foreach (var identity in identities)
+                {
+                    <div class="col-md-4 d-flex align-items-stretch">
+                        <div class="card border-dark mb-4 fixed-card-size">
+                            <img src="@identity.Image.FilePath" class="card-img-top img-fluid fixed-img-size" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">@identity.Name</h5>
+                                <p class="card-text">@identity.City</p>
+                                <p class="card-text">@identity.Age</p>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <div class="col-12">
+                    <p>No identity available</p>
+                </div>
+            }
+        }
+        else
+        {
+            <div class="col-12">
+                <p>No identity available</p>
+            </div>
+        }
+    </div>
 </div>
