--- a/IdentityWebApp/Pages/Index.cshtml
+++ b/IdentityWebApp/Pages/Index.cshtml
@@ -39,6 +39,22 @@
                     <p>No identity available</p>
                 </div>
             }
+             <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
+                        <a class="page-link" href="@Url.Page("Index", new { currentPage = Model.CurrentPage - 1 })" tabindex="-1">Previous</a>
+                    </li>
+                    @for (int i = 1; i <= Model.TotalPages; i++)
+                    {
+                        <li class="page-item @(Model.CurrentPage == i ? "active" : "")">
+                            <a class="page-link" href="@Url.Page("Index", new { currentPage = i })">@i</a>
+                        </li>
+                    }
+                    <li class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")">
+                        <a class="page-link" href="@Url.Page("Index", new { currentPage = Model.CurrentPage + 1 })">Next</a>
+                    </li>
+                </ul>
+            </nav>
         }
         else
         {
